package: add libbpf and make ip-full and tc-full use it
Signed-off-by: Chester A. Unal <chester.a.unal@arinc9.com>

--- a/.config
+++ b/.config
@@ -3990,6 +3990,7 @@ CONFIG_PACKAGE_libapi=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libblobmsg-json=y
 CONFIG_PACKAGE_libboardjson=y
+CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
@@ -4045,7 +4046,7 @@ CONFIG_LIBCURL_CRYPTO_AUTH=y
 CONFIG_PACKAGE_libdlms=m
 # CONFIG_PACKAGE_libdw is not set
 # CONFIG_PACKAGE_libedit is not set
-# CONFIG_PACKAGE_libelf is not set
+CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libev=m
 CONFIG_PACKAGE_libevent2=y
 # CONFIG_PACKAGE_libevent2-core is not set
