--- a/.config
+++ b/.config
@@ -3996,6 +3996,7 @@ CONFIG_PACKAGE_libapi=y
 CONFIG_PACKAGE_libblkid=y
 CONFIG_PACKAGE_libblobmsg-json=y
 CONFIG_PACKAGE_libboardjson=y
+CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
@@ -4051,7 +4052,7 @@ CONFIG_LIBCURL_CRYPTO_AUTH=y
 CONFIG_PACKAGE_libdlms=m
 # CONFIG_PACKAGE_libdw is not set
 # CONFIG_PACKAGE_libedit is not set
-# CONFIG_PACKAGE_libelf is not set
+CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libev=m
 CONFIG_PACKAGE_libevent2=y
 # CONFIG_PACKAGE_libevent2-core is not set
