--- a/.config
+++ b/.config
@@ -359,14 +359,19 @@ CONFIG_KERNEL_PRINTK=y
 CONFIG_KERNEL_SWAP=y
 # CONFIG_KERNEL_PROC_STRIPPED is not set
 CONFIG_KERNEL_DEBUG_FS=y
-# CONFIG_KERNEL_ARM_PMU is not set
-# CONFIG_KERNEL_PERF_EVENTS is not set
+CONFIG_KERNEL_ARM_PMU=y
+CONFIG_KERNEL_PERF_EVENTS=y
 # CONFIG_KERNEL_PROFILING is not set
 # CONFIG_KERNEL_UBSAN is not set
 # CONFIG_KERNEL_KCOV is not set
 # CONFIG_KERNEL_TASKSTATS is not set
 CONFIG_KERNEL_KALLSYMS=y
-# CONFIG_KERNEL_FTRACE is not set
+CONFIG_KERNEL_FTRACE=y
+# CONFIG_KERNEL_FTRACE_SYSCALLS is not set
+# CONFIG_KERNEL_ENABLE_DEFAULT_TRACERS is not set
+# CONFIG_KERNEL_FUNCTION_TRACER is not set
+# CONFIG_KERNEL_IRQSOFF_TRACER is not set
+# CONFIG_KERNEL_PREEMPT_TRACER is not set
 CONFIG_KERNEL_DEBUG_KERNEL=y
 CONFIG_KERNEL_DEBUG_INFO=y
 # CONFIG_KERNEL_DEBUG_LL_UART_NONE is not set
@@ -383,8 +388,10 @@ CONFIG_KERNEL_UBIFS_FS=y
 CONFIG_KERNEL_UBIFS_FS_ADVANCED_COMPR=y
 CONFIG_KERNEL_UBIFS_FS_LZO=y
 CONFIG_KERNEL_UBIFS_FS_ZLIB=y
-# CONFIG_KERNEL_KPROBES is not set
-# CONFIG_KERNEL_BPF_EVENTS is not set
+CONFIG_KERNEL_KPROBES=y
+CONFIG_KERNEL_KPROBE_EVENTS=y
+CONFIG_KERNEL_BPF_EVENTS=y
+# CONFIG_KERNEL_BPF_KPROBE_OVERRIDE is not set
 CONFIG_KERNEL_AIO=y
 CONFIG_KERNEL_IO_URING=y
 CONFIG_KERNEL_FHANDLE=y
@@ -466,7 +473,8 @@ CONFIG_KERNEL_IPV6_MROUTE=y
 CONFIG_KERNEL_IPV6_SEG6_LWTUNNEL=y
 # CONFIG_KERNEL_LWTUNNEL_BPF is not set
 # CONFIG_KERNEL_PAGE_POOL is not set
-# CONFIG_KERNEL_MPTCP is not set
+CONFIG_KERNEL_MPTCP=y
+CONFIG_KERNEL_MPTCP_IPV6=y
 # CONFIG_KERNEL_IP_PNP is not set
 
 #
@@ -603,6 +611,7 @@ CONFIG_FEED_packages=y
 CONFIG_FEED_luci=y
 CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
+# CONFIG_FEED_bsbf is not set
 
 #
 # Base system
@@ -2824,6 +2833,13 @@ CONFIG_PACKAGE_wifi_scanner=y
 # end of Base system
 
 #
+# Administration
+#
+CONFIG_PACKAGE_htop=y
+# CONFIG_HTOP_LMSENSORS is not set
+# end of Administration
+
+#
 # Boot Loaders
 #
 CONFIG_PACKAGE_sysupgrade-helper=y
@@ -3312,7 +3328,7 @@ CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-coova=y
 CONFIG_PACKAGE_kmod-ipt-core=y
 # CONFIG_PACKAGE_kmod-ipt-debug is not set
-# CONFIG_PACKAGE_kmod-ipt-extra is not set
+CONFIG_PACKAGE_kmod-ipt-extra=y
 CONFIG_PACKAGE_kmod-ipt-filter=m
 CONFIG_PACKAGE_kmod-ipt-hashlimit=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
@@ -3331,7 +3347,7 @@ CONFIG_PACKAGE_kmod-ipt-raw=y
 CONFIG_PACKAGE_kmod-ipt-raw6=y
 # CONFIG_PACKAGE_kmod-ipt-rpfilter is not set
 # CONFIG_PACKAGE_kmod-ipt-tee is not set
-# CONFIG_PACKAGE_kmod-ipt-tproxy is not set
+CONFIG_PACKAGE_kmod-ipt-tproxy=y
 # CONFIG_PACKAGE_kmod-ipt-u32 is not set
 # CONFIG_PACKAGE_kmod-ipt-ulog is not set
 CONFIG_PACKAGE_kmod-nf-conntrack=y
@@ -3453,6 +3469,7 @@ CONFIG_PACKAGE_kmod-mii=y
 CONFIG_PACKAGE_kmod-gre=y
 CONFIG_PACKAGE_kmod-gre6=y
 # CONFIG_PACKAGE_kmod-inet-diag is not set
+# CONFIG_PACKAGE_kmod-inet-mptcp-diag is not set
 # CONFIG_PACKAGE_kmod-ip-vti is not set
 CONFIG_PACKAGE_kmod-ip6-tunnel=y
 # CONFIG_PACKAGE_kmod-ip6-vti is not set
@@ -3486,10 +3503,10 @@ CONFIG_PACKAGE_kmod-pppol2tp=y
 CONFIG_PACKAGE_kmod-pppox=y
 CONFIG_PACKAGE_kmod-pptp=y
 # CONFIG_PACKAGE_kmod-sched is not set
-# CONFIG_PACKAGE_kmod-sched-act-csum is not set
+CONFIG_PACKAGE_kmod-sched-act-csum=y
 CONFIG_PACKAGE_kmod-sched-act-ipt=y
 # CONFIG_PACKAGE_kmod-sched-act-vlan is not set
-# CONFIG_PACKAGE_kmod-sched-bpf is not set
+CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-connmark=m
 CONFIG_PACKAGE_kmod-sched-core=y
@@ -3621,13 +3638,13 @@ CONFIG_PACKAGE_kmod-usb-net=y
 # CONFIG_PACKAGE_kmod-usb-net-asix is not set
 # CONFIG_PACKAGE_kmod-usb-net-asix-ax88179 is not set
 # CONFIG_PACKAGE_kmod-usb-net-cdc-eem is not set
-# CONFIG_PACKAGE_kmod-usb-net-cdc-ether is not set
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
 # CONFIG_PACKAGE_kmod-usb-net-cdc-mbim is not set
-# CONFIG_PACKAGE_kmod-usb-net-cdc-ncm is not set
+CONFIG_PACKAGE_kmod-usb-net-cdc-ncm=y
 # CONFIG_PACKAGE_kmod-usb-net-cdc-subset is not set
 # CONFIG_PACKAGE_kmod-usb-net-dm9601-ether is not set
 # CONFIG_PACKAGE_kmod-usb-net-hso is not set
-# CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm is not set
+CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
 # CONFIG_PACKAGE_kmod-usb-net-ipheth is not set
 # CONFIG_PACKAGE_kmod-usb-net-kalmia is not set
 # CONFIG_PACKAGE_kmod-usb-net-kaweth is not set
@@ -3982,6 +3999,7 @@ CONFIG_PACKAGE_bluez-libs=y
 CONFIG_PACKAGE_classpath=m
 # CONFIG_PACKAGE_classpath-tools is not set
 CONFIG_PACKAGE_davici=y
+CONFIG_PACKAGE_ell=y
 # CONFIG_PACKAGE_exe4cpp is not set
 CONFIG_PACKAGE_glib2=y
 CONFIG_PACKAGE_libapi=y
@@ -4092,7 +4110,7 @@ CONFIG_PACKAGE_libmosquitto-ssl=y
 # CONFIG_PACKAGE_libmosquittopp is not set
 # CONFIG_PACKAGE_libmount is not set
 CONFIG_PACKAGE_libnatpmp=m
-CONFIG_PACKAGE_libncurses=m
+CONFIG_PACKAGE_libncurses=y
 # CONFIG_PACKAGE_libnetfilter-acct is not set
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnetfilter-log=y
@@ -4183,7 +4201,7 @@ CONFIG_PACKAGE_rpcd-mod-mnfinfo=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_rpcd-mod-smslimit=y
 # CONFIG_PACKAGE_ser4cpp is not set
-CONFIG_PACKAGE_terminfo=m
+CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_zlib=y
 
 #
@@ -4326,7 +4344,7 @@ CONFIG_PACKAGE_iptables=y
 # CONFIG_PACKAGE_iptables-mod-cluster is not set
 # CONFIG_PACKAGE_iptables-mod-clusterip is not set
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-# CONFIG_PACKAGE_iptables-mod-extra is not set
+CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-filter=m
 CONFIG_PACKAGE_iptables-mod-hashlimit=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
@@ -4339,7 +4357,7 @@ CONFIG_PACKAGE_iptables-mod-nflog=y
 # CONFIG_PACKAGE_iptables-mod-physdev is not set
 # CONFIG_PACKAGE_iptables-mod-rpfilter is not set
 # CONFIG_PACKAGE_iptables-mod-tee is not set
-# CONFIG_PACKAGE_iptables-mod-tproxy is not set
+CONFIG_PACKAGE_iptables-mod-tproxy=y
 # CONFIG_PACKAGE_iptables-mod-trace is not set
 # CONFIG_PACKAGE_iptables-mod-u32 is not set
 # CONFIG_PACKAGE_iptables-mod-ulog is not set
@@ -4484,8 +4502,8 @@ CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_relayd=y
 # CONFIG_PACKAGE_ss is not set
 # CONFIG_PACKAGE_tc-bpf is not set
-# CONFIG_PACKAGE_tc-full is not set
-# CONFIG_PACKAGE_tc-mod-iptables is not set
+CONFIG_PACKAGE_tc-full=y
+CONFIG_PACKAGE_tc-mod-iptables=y
 CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_vrrpd=y
 # end of Routing and Redirection
@@ -4658,6 +4676,9 @@ CONFIG_PACKAGE_zerotier=m
 #
 # WWAN
 #
+CONFIG_PACKAGE_comgt=y
+# CONFIG_PACKAGE_comgt-directip is not set
+CONFIG_PACKAGE_comgt-ncm=y
 CONFIG_PACKAGE_uqmi=y
 # end of WWAN
 
@@ -4733,7 +4754,7 @@ CONFIG_PACKAGE_wpad-openssl=y
 # end of WirelessAPD
 
 CONFIG_PACKAGE_bfdd-frr=m
-# CONFIG_PACKAGE_chat is not set
+CONFIG_PACKAGE_chat=y
 CONFIG_PACKAGE_cmStreamApp=m
 CONFIG_PACKAGE_connchecker=y
 CONFIG_PACKAGE_data-sender=y
@@ -4830,6 +4851,8 @@ CONFIG_PACKAGE_mosquitto-ssl=y
 CONFIG_MOSQUITTO_CTRL=y
 # CONFIG_MOSQUITTO_DYNAMIC_SECURITY is not set
 # CONFIG_MOSQUITTO_PASSWD is not set
+CONFIG_PACKAGE_mptcpd=y
+CONFIG_PACKAGE_mptcpize=y
 CONFIG_PACKAGE_mqtt-modbus-gateway=y
 CONFIG_PACKAGE_mqtt_pub=y
 CONFIG_PACKAGE_networkmap=y
@@ -4866,6 +4889,23 @@ CONFIG_PACKAGE_ppp-mod-pptp=y
 CONFIG_PACKAGE_samba36-server=m
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
 CONFIG_PACKAGE_shellinabox=y
+CONFIG_PACKAGE_sing-box=y
+
+#
+# Select build options
+#
+# CONFIG_SINGBOX_WITH_ACME is not set
+CONFIG_SINGBOX_WITH_CLASH_API=y
+# CONFIG_SINGBOX_WITH_DHCP is not set
+# CONFIG_SINGBOX_WITH_EMBEDDED_TOR is not set
+# CONFIG_SINGBOX_WITH_GRPC is not set
+CONFIG_SINGBOX_WITH_GVISOR=y
+CONFIG_SINGBOX_WITH_QUIC=y
+CONFIG_SINGBOX_WITH_UTLS=y
+# CONFIG_SINGBOX_WITH_V2RAY_API is not set
+CONFIG_SINGBOX_WITH_WIREGUARD=y
+# end of Select build options
+
 # CONFIG_PACKAGE_snmp-mibs is not set
 # CONFIG_PACKAGE_snmp-utils is not set
 CONFIG_PACKAGE_snmpd=y
@@ -5402,3 +5442,5 @@ CONFIG_VUCI_USE_HOST_NODE=y
 CONFIG_VUCI_NODE_EXTRA_BIN_PATH=""
 # end of Configuration
 # end of WebUI
+
+CONFIG_OVERRIDE_PKGS="golang"
